# app-foundation

./: .env.control-plane.example  .env.example  .gitignore  .npmignore  AGENTS.md  CLAUDE.md  README.md  catalog.yaml  command-manifest.yaml  constitution-changelog.md  constitution-workflow.md  constitution.md  docker-compose.n8n.yml  pyproject.toml  quickstart.md  readme.doc  uv_env.py
.claude/: constitution-workflow.md  settings.json
.claude/commands/: dashboard-design.md  (+29 more)
.codegraphcontext/: last-edit-signature.txt
.codex/: hooks.json
.specify/: command-manifest.yaml
.speckit/: pipeline-ledger.jsonl  task-ledger.jsonl
scripts/: cgc_doctor.sh  cgc_index_repo.sh  cgc_owner.sh  cgc_safe_index.sh  e2e_002_watchlist_research.sh  e2e_008.sh  e2e_009_dashboard.sh  e2e_015_control_plane_dispatch.sh  e2e_017_control_plane_hitl_audit.sh  e2e_018_clickup_sync.sh  e2e_019_token_efficiency_docs.sh  e2e_020.sh  e2e_020_codebase_vector_index.sh  e2e_022-codegraph-hardening.sh  e2e_022_codegraph_hardening.sh  e2e_023_deterministic_phase_orchestration.sh  e2e_025_intent_anchor_routing.sh  e2e_paper.sh  edit-code.sh  edit_code.py  gh_safe_pr_files.sh  gh_safe_pr_info.sh  git_diff_guard.py  hook_enforce_code_reads.py  hook_enforce_gh_cli.py  hook_enforce_git_diff_guard.py  hook_enforce_pyright_guard.py  hook_enforce_pytest_guard.py  hook_enforce_refresh_guard.py  hook_enforce_ruff_guard.py  hook_enforce_uv_run_guard.py  hook_pretool_dispatch.py  hook_refresh_indexes.py  offline_qa.py  pipeline_driver.py  pipeline_driver_contracts.py  pipeline_driver_state.py  pipeline_ledger.py  pyright_guard.py  pytest_guard.py  (+31 more)
tests/: conftest.py
(+589 files in other folders)
