[project]
name = "app-foundation"
version = "1.0.0"
description = "Event-driven application template with ClickUp control plane, MCP servers, and speckit governance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.23.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20,<1.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.7,<14",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "chromadb>=1.5.6,<2.0",
    "fastembed>=0.4.0,<1.0",
    "watchdog>=6.0.0,<7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pyright>=1.1.408",
    "codegraphcontext>=0.3.1",
    "kuzu>=0.11.3",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "contract: marks contract/integration tests",
    "unit: marks unit tests",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_trello", "src/mcp_codebase", "src/clickup_control_plane", "src/mcp_clickup"]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
# D: pydocstyle — enforce docstrings on public functions, classes, and modules
select = ["E", "F", "I", "D"]
ignore = [
    "D203",  # conflicts with D211 (no-blank-line-before-class)
    "D213",  # conflicts with D212 (multi-line-summary-second-line)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"test*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
